readon functionality, bug:sudden blank when collapse

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -13,3 +13,8 @@
 .list .item.item-accordion.ng-hide-remove {
     display: block !important;
 }
+
+div.story .spinner svg {
+    width: 15px;
+    height: 15px;
+}
